syntax = "proto3";

package pb;

import "author.proto";

option go_package = "github.com/heritechie/go-book-catalog/book-repo-svc/pkg/pb";

message GetAuthorRequest {
    string author_id = 1;
}

message GetAuthorResponse {
    Author author = 1;
}
